# chanx-example

./: .coveragerc  .env.TEMPLATE  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  tox.ini
chanx_example/: pytest.ini
chanx_example/accounts/: urls.py
chanx_example/assistants/: admin.py  constants.py  consumers.py  permissions.py  prompts.py  routing.py  urls.py  web_urls.py
chanx_example/assistants/consumers/: __init__.py  conversation_consumer.py
chanx_example/assistants/factories/: __init__.py  assistant_conversation.py  assistant_message.py
chanx_example/assistants/messages/: assistant.py
chanx_example/assistants/migrations/: 0001_initial.py
chanx_example/assistants/models/: __init__.py  assistant_conversation.py  assistant_message.py
chanx_example/assistants/serializers/: __init__.py  conversation_serializers.py  message_serializers.py
chanx_example/assistants/services/: ai_service.py
chanx_example/assistants/tasks/: __init__.py  ai_service_tasks.py  assistant_tasks.py
chanx_example/assistants/templates/assistants/: base.html  chat.html  home.html
chanx_example/assistants/tests/: test_chat_view.py  test_consumers.py  test_permissions.py
chanx_example/assistants/tests/consumers/: test_conversation_consumer.py  test_conversation_consumer_integrations.py
chanx_example/assistants/views/: __init__.py  anonymous_conversation_view.py  chat_view.py  conversation_views.py  message_views.py
chanx_example/chat/: admin.py  apps.py  permissions.py  routing.py  urls.py  utils.py  web_urls.py
chanx_example/chat/consumers/: chat_detail.py  chat_list.py  group.py
chanx_example/chat/factories/: chat_member.py  chat_message.py  group_chat.py
chanx_example/chat/messages/: chat.py  group.py  member.py
chanx_example/chat/migrations/: 0001_initial.py
chanx_example/chat/models/: __init__.py  chat_member.py  chat_message.py  group_chat.py
chanx_example/chat/serializers/: __init__.py  chat_member_serializer.py  chat_message_serializer.py  group_chat_serializer.py
chanx_example/chat/tasks/: __init__.py  group.py  group_tasks.py  member.py  message.py  message_tasks.py
chanx_example/chat/tests/: test_permissions.py
chanx_example/chat/views/: __init__.py  chat_member_view.py  chat_message_view.py  group_chat_detail_view.py  group_chat_view.py  group_member_view.py  home_view.py
chanx_example/config/: asgi.py  routing.py  urls.py
chanx_example/config/settings/: base.py  dev.py  production.py  test.py
chanx_example/discussion/: admin.py  consumers.py  routing.py  tasks.py  urls.py  web_urls.py
chanx_example/discussion/consumers/: __init__.py  list_consumer.py  topic_consumer.py
chanx_example/discussion/factories/: __init__.py  discussion_reply.py  discussion_topic.py
chanx_example/discussion/messages/: __init__.py  common_messages.py  discussion.py  topic_detail_messages.py  topic_list_messages.py
chanx_example/discussion/migrations/: 0001_initial.py
chanx_example/discussion/models/: __init__.py  discussion_reply.py  discussion_topic.py
chanx_example/discussion/serializers/: __init__.py  reply_serializers.py  topic_serializers.py  voting_serializers.py
chanx_example/discussion/tasks/: __init__.py  reply_tasks.py  topic_tasks.py
chanx_example/discussion/tests/: test_consumers.py
chanx_example/discussion/views/: __init__.py  reply_views.py  topic_views.py  web_views.py
chanx_example/test_utils/: auth_api_test_case.py  factory.py  openai_test_utils.py  testing.py
chanx_example/utils/: request.py
scripts/: lint.sh  manage.sh  mypy.sh
(+34 files in other folders)
